Fixed lists clipping in forums
Fixed list bullet points/numbers clipping through the border between "alter info" box and "forum post" box in forums

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -332,6 +332,7 @@ p{
 
 li {
     margin-bottom: 1em;
+	margin-left: 1em;
 }
 
 footer{
